--- a/newHomepage/css/template.scss
+++ b/newHomepage/css/template.scss
@@ -217,13 +217,13 @@ body{
 		max-width: 100%;
 		.page-sizer{
 			margin: 0 auto;
-			width: 1024px;
+			width: 80%;
 			padding-left: 2%;
 			padding-right: 2%;
 		}
 		.page-sizer-section{
 			margin: 0 auto;
-			width: 1024px;
+			width: 80%;
 		}
 		.columns{
 			padding-left: 0;
